# juracoffeemachine

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
juracoffeemachine/: __init__.py  __main__.py  coffee_machine.py  jura.py  response.py  serial.py
tests/: test_coffee_machine.py  test_jura.py  test_response.py
