[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["juracoffeemachine"]

[project]
name = "juracoffeemachine"
version = "0.9.6"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

description = "Controls a Jura E6"
authors = [{ name = "Seb-sti1", email = "noreply@kerbourch.fr" }]
dependencies = [
    "pyserial==3.5",
    "asyncio"
]


[project.scripts]
juracoffeemachine = "juracoffeemachine.__main__:main"